#19 Feat 테스트코드 개선