@@ -3,9 +3,11 @@ package com.example.recovery.repository.memoirs;
 import com.example.recovery.config.QuerydslConfig;
 import com.example.recovery.domain.memoirs.Memoirs;
 import com.example.recovery.domain.user.Users;
-import com.example.recovery.fakeMaker.FakeMemoirMaker;
+import com.example.recovery.maker.MemoirsMaker;
+import com.example.recovery.maker.UsersMaker;
 import com.example.recovery.request.MemoirListRequest;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
@@ -14,6 +16,7 @@ import org.springframework.context.annotation.Import;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -28,30 +31,26 @@ class MemoirRepositoryImplTest {
     @Autowired
     private TestEntityManager entityManager;
 
+    private UsersMaker usersMaker;
+    private MemoirsMaker memoirsMaker;
+
+    @BeforeEach
+    void setUp() {
+        usersMaker = new UsersMaker(entityManager);
+        memoirsMaker = new MemoirsMaker(entityManager);
+    }
+
     @Test
     @DisplayName("회고 목록 조회 - userId 조건에 맞는 memoir를 date desc로 조회한다")
     void getMemoirsByRequest_filtersByUserAndSortsByDateDesc() {
         // given
-        Users userA = persistUser("user-a", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
-        Users userB = persistUser("user-b", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
-        long userAId = extractId(userA);
-        long userBId = extractId(userB);
+        Users userA = usersMaker.persist("user-a", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
+        Users userB = usersMaker.persist("user-b", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
+        long userAId = usersMaker.extractId(userA);
 
-        entityManager.persist(FakeMemoirMaker.memoir(null, FakeMemoirMaker.MemoirOptions.builder()
-                .uid(userAId)
-                .date(OffsetDateTime.parse("2026-01-03T12:00:00+09:00"))
-                .build()
-        ));
-        entityManager.persist(FakeMemoirMaker.memoir(null, FakeMemoirMaker.MemoirOptions.builder()
-                .uid(userAId)
-                .date(OffsetDateTime.parse("2026-01-01T12:00:00+09:00"))
-                .build()
-        ));
-        entityManager.persist(FakeMemoirMaker.memoir(null, FakeMemoirMaker.MemoirOptions.builder()
-                .uid(userBId)
-                .date(OffsetDateTime.parse("2026-01-02T12:00:00+09:00"))
-                .build()
-        ));
+        memoirsMaker.persist(userA, OffsetDateTime.parse("2026-01-03T12:00:00+09:00"));
+        memoirsMaker.persist(userA, OffsetDateTime.parse("2026-01-01T12:00:00+09:00"));
+        memoirsMaker.persist(userB, OffsetDateTime.parse("2026-01-02T12:00:00+09:00"));
 
         entityManager.flush();
         entityManager.clear();
@@ -64,20 +63,29 @@ class MemoirRepositoryImplTest {
 
         // then
         assertEquals(2, result.size());
-        assertEquals(OffsetDateTime.parse("2026-01-03T12:00:00+09:00"), result.get(0).getDate());
+        Memoirs firstMemoir = result.getFirst();
+        assertEquals(OffsetDateTime.parse("2026-01-03T12:00:00+09:00"), firstMemoir.getDate());
         assertEquals(OffsetDateTime.parse("2026-01-01T12:00:00+09:00"), result.get(1).getDate());
+
+        Map<String, Object> memoir1 = memoirsMaker.asMap(firstMemoir.getMemoir().get("1"));
+        assertEquals("2026/01/01 회고 - 오늘 공부한 것", memoir1.get("title"));
+        assertEquals("TSX란?", memoirsMaker.nestedValue(memoir1, "subMemoirTitles", "1", "title"));
+
+        Map<String, Object> improvement1 = memoirsMaker.asMap(firstMemoir.getImprovement().get("1"));
+        assertEquals("TSX를 공부했다.", improvement1.get("improvement"));
+        assertEquals("TSX는 React 컴포넌트 정의를 위한 TypeScript기반 파일이다.", memoirsMaker.nestedValue(improvement1, "subImprovements", "1", "improvement"));
+
+        Map<String, Object> feedback1 = memoirsMaker.asMap(firstMemoir.getFeedback().get("1"));
+        assertEquals("TSX를 공부했다.", feedback1.get("feedback"));
+        assertEquals("TSX는 React 컴포넌트 정의를 위한 TypeScript기반 파일이다.", memoirsMaker.nestedValue(feedback1, "subFeedback", "1", "feedback"));
     }
 
     @Test
     @DisplayName("조회 결과가 없으면 빈 리스트를 반환한다")
     void getMemoirsByRequest_returnsEmptyListWhenNoRows() {
         // given
-        Users userA = persistUser("user-a", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
-        entityManager.persist(FakeMemoirMaker.memoir(null, FakeMemoirMaker.MemoirOptions.builder()
-                .uid(extractId(userA))
-                .date(OffsetDateTime.parse("2026-01-05T12:00:00+09:00"))
-                .build()
-        ));
+        Users userA = usersMaker.persist("user-a", OffsetDateTime.parse("2026-01-01T00:00:00+09:00"));
+        memoirsMaker.persist(userA, OffsetDateTime.parse("2026-01-05T12:00:00+09:00"));
         entityManager.flush();
         entityManager.clear();
 
@@ -89,19 +97,5 @@ class MemoirRepositoryImplTest {
 
         // then
         assertTrue(result.isEmpty());
-    }
-
-    private Users persistUser(String nickname, OffsetDateTime createdAt) {
-        Users user = FakeMemoirMaker.user(nickname, createdAt);
-        entityManager.persist(user);
-        entityManager.flush();
-        return entityManager.find(Users.class, extractId(user));
-    }
-
-    private long extractId(Users user) {
-        return (long) entityManager.getEntityManager()
-                .getEntityManagerFactory()
-                .getPersistenceUnitUtil()
-                .getIdentifier(user);
     }
 }
